# Agentic-Learning

./: .env  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
autogen/: Autogen Agents Tools.ipynb  Autogen Agents.ipynb  Autogen Teams.ipynb  CodeExectorAgent.py  Human in the loop Outside.ipynb  Human in the loop.ipynb  first autogen agent.ipynb
autogen/Advance/: Memory.ipynb  Society of Mind.ipynb
autogen/teams/: Autogen Graph Flow.ipynb  Autogen Teams.ipynb  Selection Group Chat.ipynb  swarm.ipynb
langchain/: basics.ipynb  data-ingestion.ipynb  embeddings.ipynb
langchain/FAISS/: vectoredatabase.ipynb
langchain/Pinecone/: code.ipynb
langchain/todays_Class/: index.faiss  index.pkl
langgraph/: Agentic RAG Class 5.ipynb  Corrective RAG Class 5.ipynb  Human-In-Loop Class 8.ipynb  MultiAgent_Class_6.ipynb  Network Multi Agent_Class_6.ipynb  Supervisor Multi Agent Class 7.ipynb  index.ipynb  langgraph_Agentic_2.ipynb  langgraph_Agentic_Class_2.ipynb  langgraph_Agentic_Class_4.ipynb  langgraph_Agentic_Class_5.ipynb  langgraph_intro.ipynb  langgrapha_Agentic_Class_3.ipynb  tools.ipynb
pydantic/: pydantic.ipynb
