[project]
name = "agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens>=3.0.1",
    "awscli>=1.44.24",
    "boto3>=1.42.32",
    "bs4>=0.0.2",
    "comm>=0.2.3",
    "ddgs>=9.10.0",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.1.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-pinecone>=0.2.13",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.6",
    "opensearch-py>=3.1.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "requests-aws4auth>=1.3.1",
    "sentence-transformers>=5.2.0",
    "wikipedia>=1.4.0",
]
