[project]
name = "agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens>=3.0.1",
    "autogen-agentchat>=0.7.5",
    "autogen-core>=0.7.5",
    "autogen-ext[docker,http-tool,ollama]>=0.7.5",
    "autogenstudio>=0.0.49",
    "bs4>=0.0.2",
    "chromadb>=1.4.1",
    "comm>=0.2.3",
    "ddgs>=9.10.0",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.17",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.7",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.2",
    "tiktoken>=0.12.0",
    "yfinance>=1.1.0",
]
